--- a/src/css/FolderPicker.css
+++ b/src/css/FolderPicker.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     gap: 18px;
-    height: calc(100vh - 112px);
+    height: calc(100vh - 200px);
   }
    .optionContainer .option{
     text-transform: capitalize;
